add in in adsense

--- a/home.html
+++ b/home.html
@@ -33,6 +33,14 @@
         
     </body>
 
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-2694985640713889",
+    enable_page_level_ads: true
+  });
+</script>
+
     <script>
     function JazzChords(){
     var notes = ["A","A#","A", "Bb","B","C", "C#", "Db","D","D#","Eb","E","F","F#", "Gb", "G","G#", "Ab"];
