routing working, adding jazz content

--- a/guitar-studier/src/index.html
+++ b/guitar-studier/src/index.html
@@ -31,10 +31,10 @@
       <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link"routerLink="/" routerLinkActive="active">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="/" >Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="/jazz" routerLinkActive="active">Jazz</a>
+            <a class="nav-link" href="/jazz">Jazz</a>
           </li>
           <!--
           <li class="nav-item">
@@ -51,10 +51,12 @@
           </li>
         -->
         </ul>
+        <!--
         <form class="form-inline my-2 my-lg-0">
           <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
           <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
         </form>
+      -->
       </div>
     </nav>
     <app-root></app-root>
@@ -78,7 +80,6 @@
 <head>
   <meta charset="utf-8">
   <title>Guitar Studier</title>
-  <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
