--- a/guitar-studier/src/index.html
+++ b/guitar-studier/src/index.html
@@ -34,7 +34,7 @@
             <a class="nav-link" href="/" >Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/jazz">Jazz</a>
+            <a class="nav-link" routerLink="/jazz">Jazz</a>
           </li>
           <!--
           <li class="nav-item">
