--- a/guitar-studier/src/index.html
+++ b/guitar-studier/src/index.html
@@ -27,7 +27,7 @@
     
 
     <footer class="container">
-      <p>&copy; Company 2017-2018</p>
+      <p>&copy; Ben Lutz 2017-2018</p>
     </footer>
 
     <!-- Bootstrap core JavaScript
